Fix CORS for cloud deployment with dynamic IP